@@ -1,6 +1,7 @@
 Imagination changelog
 
-zz/10/09 - 2.1:
+zz/10/09 - 2.5:
+			- Fixed crash when playing with Ken Burns and slide text after closing the project.
 			- Added a nice slides transitions report.
 			- Fixed display of music duration after loading the slideshow.
 			- Fixed seg-fault when exporting with audio files.
